--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=10%height=10%alt="代码的图片">
+<img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"alt="代码的图片">
 </html>
 </body>	
