--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=100% height=10%alt="代码的图片">
+<img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=100% height=10% title="Photograph by J. Godfrey（作者：戈弗雷）"alt="代码的图片">
+<a href="http://www.baidu.com"><img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"></a>
 </html>
 </body>	
