--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=10% height=10% title="Photograph by J. Godfrey（作者：戈弗雷）"alt="代码的图片">
-<a href="http://www.baidu.com"><img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"></a>
+<a href="http://www.baidu.com"><img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=10% height=10% title="Photograph by J. Godfrey（作者：戈弗雷）"alt="代码的图片"></a>
 </html>
 </body>	
