--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<a href="http://www.baidu.com"><img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=10% height=10% title="Photograph by 网络"alt="代码的图片"></a>
+<a href="http://www.67194.com"><img src="http://pic.666pic.com/thumbs/1003924/22942856/api_thumb_450.jpg"width=10% height=10% title="Photograph by 网络"alt="代码的图片"></a>
 </html>
 </body>	
